--- a/estilos.css
+++ b/estilos.css
@@ -1,2 +1,12 @@
-.cabecera{width: 100%; height: 100px; border-bottom: solid 5px #00ffaa}
-.cuerpo{}
+/* font-family: 'Molle', cursive; */
+@import url{'https://fonts.googleapis.com/css?family=Molle:400i" rel="stylesheet'}
+/*cabecera*/
+.cabecera{width: 100%; height: 115px; border-bottom: solid 5px #00b38f;}
+.contenidocabecera{width: 1024px; height:115px; float: left; position: relative; left: 50%; margin-left: -512px;}
+/*cuerpo*/
+.fondo{width: 100%; float: left; position: relative; background-image:_url(imagenes/comunes/fondo.jpg);
+background-repeat: repeat; background-position: center; background-size: contain; }
+.contenido{}
+/*pie*/
+.pie {width: 100%; height: 115px; border-top: solid 15px #009999;}
+.contenidopie{}
