--- a/estilos.css
+++ b/estilos.css
@@ -1,16 +1,59 @@
 /* font-family: 'Berkshire Swash', cursive; */
 @import url{'https://fonts.googleapis.com/css?family=Berkshire+Swash'}
+
 /*cabecera*/
 .cabecera{width: 100%; height: 115px; border-bottom: solid 5px #00b38f;}
 .contenidocabecera{width: 1024px; height:115px; float: left; position: relative; left: 50%; margin-left: -512px;}
-.logo{float: left; position: relative; width: 727px; height: 115px; background-image: url(imagenes/comunes/mari.jpg);
+.logo{float: left; position: relative; width: 727px; height: 115px; background-image: url(imagenes/comunes/pz.jpg);
  background-repeat: no-repeat; left: 50%; margin-left:-355px; background-size: contain;}
- h1{float: left; position: relative; font-family: 'Berkshire Swash', cursive; color: #00b38f; font-size: 3rem; font-weight: 500; margin-top: 7px;}
+ h1{float: left; position: relative; font-family: 'Berkshire Swash', cursive; color: #00b38f; font-size: 3rem;
+ font-weight: 500; margin-top: 7px;}
+ 
+ 
 /*cuerpo*/
 .fondo{width: 100%; float: left; position: relative; background-image: url(imagenes/comunes/fondo.jpg);
+
 background-repeat: repeat; background-position: center; background-size: contain;}
+
 .contenido{width: 1024px; height: auto; float: left; position: relative; left: 50%;
 margin-left: -512px; padding-top: 30px; padding-bottom: 30px;}
-/*pie*/
-.pie {width: 100%; height: 115px; border-top: solid 15px #009999;}
-.contenidopie{}
+
+.entrada{float: left; position: relative; background-color: #fff; width: 800px; height: 300px; margin-left: 111px; margin-bottom: 50px; margin-top: 50px;
+   -webkit-box-shadow: 1px 7px 100px 9px #18959E; box-shadow: 1px 7px 100px 9px #18959E;}
+
+.contenedorimagen{float: left; position: relative; border-right:solid 2px; #00b38f; width: 280px; height: 300px; }
+
+.imagen{ position: absolute; width: 100%; height: 100%; object-fit: contain; overflow: hidden; margin:0px; }
+
+.informacion{float: left; position: relative; width: 469px; height: 300px; padding-left: 22px; padding-right: 20px; }
+
+.fecha{float: left; position: relative; font-family: 'Berkshire Swash', cursive; font-size: 1.1rem; font-weight: 400;
+      color:#b2b52b; margin-top:7px; margin-bottom: 0px;}
+
+.titulo{ float: left; position: relative; width: 468px; height: 52px; overflow: hidden; font-family: 'Berkshire Swash', cursive;
+font-size: 1.5rem; font-weight: 700; text-transform: upperase; text-align: left; color: #ee5ble; line-height: 1.8rem; margin-bottom: 0px;
+margin-top: 5px;}      
+
+.texto{float: left; position: relative; width: 474px; height: 172px; font-family: 'Berkshire Swash', cursive;font-size: 1.1rem;
+font-weight: 300; text-align: justify; overflow: hidden; margin-top: 8px;}
+
+.boton{ float: right; position: relative; width: 101px; height: 97px; background-color: #00b38f; font-family: 'Berkshire Swash',cursive;
+  font-size: 1.1rem; font-weight: 600; text-align: justify; overflow: hidden; margin-top: 8px; border: none; border-radius: 50% 50% 0% 50% ;
+  -webkit-box-shadow: 1px 7px 50px 9px #009999; box-shadow: 1px 7px 50px 9px #009999; margin-right: -49px;
+  text-shadow: 3px 3px 5px #009999; padding-top: 8px; cursor: pointer;}
+.boton:hover{background-color: #009999; text-shadow: 3px 3px 5px #00b38f;
+   -webkit-box-shadow: 1px 7px 11px 9px #2CE6CD; box-shadow: 1px 7px 11px 9px #2CE6CD;}
+.leer {margin-top: -68px;}
+
+/*pie*/ 
+.pie {width: 100%; height: 115px; border-top: solid 15px #009999; float: left; position: relative;background-color: #fff;}
+
+.contenidopie{ width: 1024px; height: 105px; float: left; position: relative; left: 50%; margin-left:-512px;} 
+
+.junta{float: left; position: relative; width: 118px; margin-left: 126px; margin-top: 10px;}
+
+.programatic{float: left; position: relative; width: 330px; margin-left: 35px; margin-top: 27px;}
+
+.aje{float: left; position: relative; width: 116px; margin-left: 28px; margin-top:0px; }
+
+.europeo{float: left; position: relative; width: 108px; margin-left: 36px; margin-top: 11px;}
