--- a/estilos.css
+++ b/estilos.css
@@ -63,16 +63,31 @@ font-weight: 300; text-align: justify; overflow: hidden; margin-top: 8px;}
  
 .fondoentrada{width: 100%; float: left; position: relative; background-image: url(imagenes/comunes/clari.jpg);
 background-repeat: repeat;}
+
 .contenidoentrada{width: 1024px; height: auto; float: left; position: relative; left: 50%;
 margin-left: -512px; padding: 30px; background-color: #fff; margin-bottom: 65px; margin-top:65px;}
+
 .volver{ float: left; position: relative; width: 99px; background-color: #00b38f; font-family: 'Berkshire Swash',cursive;
   font-size: 1.4rem; font-weight: 800; text-align: justify; overflow: hidden; border: none; border-radius: 0% 50% 50% 50% ;
-  -webkit-box-shadow: 1px 7px 50px 9px #009999; box-shadow: 1px 7px 50px 9px #009999; margin-left: -55px; margin-top: -42px; padding-left: 10px;
+  -webkit-box-shadow: 1px 7px 50px 9px #009999; box-shadow: 1px 7px 50px 9px #009999; margin-left: -93px; margin-top: -74px; padding-left: 11px;
   text-shadow: 3px 3px 5px #009999; padding-top: 8px; cursor: pointer; text-decoration: none;}
+
 .volver:hover{background-color: #009999; text-shadow: 3px 3px 5px #00b38f;
    -webkit-box-shadow: 1px 7px 11px 9px #2CE6CD; box-shadow: 1px 7px 11px 9px #2CE6CD;}
 
+.tituloentrada{float: left; position: relative; width: 892px; font-family: 'Karma', serif; font-size: 3.5rem;
+font-weight: 700; text-align: center; color: #FF61EF; line-height: 4rem; margin-left: 50px;}
 
+.imagenentrada{float: left; position: relative; width: 485px; height: 519px; border: solid 5px #2E2EFF;
+margin-top: 5px;}
+
+.fechaentrada{float: left; position: relative; width: 505px; font-family: 'Berkshire Swash', cursive; font-size: 1.7rem;
+font-weight: 400;color:#2E2EFF; margin-top: -44px; margin-left: 516px; text-align: left;}
+
+.textoentrada{ float: left; position: relative; width: 1024px; font-family: 'Berkshire Swash', cursive; font-size: 1rem;
+font-weight:200; text-align: justify; line-height: 2.01rem; margin-top: -473px;}
+
+.huecoimagen{float: left; position: relative; width: 553px; height: 550px; margin-top: -48px;}
 
 
 
