--- a/estilosadministrador.css
+++ b/estilosadministrador.css
@@ -18,32 +18,44 @@ background-repeat: repeat; background-position: center; background-size: contain
 .contenido{width: 1024px; height: auto; float: left; position: relative; left: 50%;
 margin-left: -512px; padding-top: 30px; padding-bottom: 30px;}
 
+.titular{float: left; position: relative; width: 94%; height: 76px;  font-family: 'Berkshire Swash', cursive;
+font-size: 3rem; font-weight: 700; text-transform: uppercase; text-align: center; color: #fff; margin: 0px; background-color: #00b38f;
+-webkit-box-shadow: 1px 7px 100px 9px #18959E; box-shadow: 1px 7px 100px 9px #18959E; margin-top: -9px;}
+
 .entrada{float: left; position: relative; background-color: #fff; width: 800px; height: 300px; margin-left: 111px; margin-bottom: 50px; margin-top: 50px;
    -webkit-box-shadow: 1px 7px 100px 9px #18959E; box-shadow: 1px 7px 100px 9px #18959E;}
 
 .contenedorimagen{float: left; position: relative; border-right:solid 2px; #00b38f; width: 280px; height: 300px; }
 
-.imagen{ position: absolute; width: 100%; height: 100%; object-fit: contain; overflow: hidden; margin:0px; }
+.imagen{ float: left; position: relative; width: 100%; height: 100%; object-fit: contain; overflow: hidden; margin:0px;
+margin-left: -3px; margin-right: 6px; }
 
-.informacion{float: left; position: relative; width: 469px; height: 300px; padding-left: 22px; padding-right: 20px; }
+.descripcion{float: left; position: relative; width: 92%; height:28px;font-family: 'Berkshire Swash', cursive;
+font-size: 1rem; font-weight: 300; color:#00b38f; margin-top:-270px; margin-bottom: 8px; }
+
+.examinar{float: left; position: relative; width: 96%; height: 37px; margin-left: 4px; margin-top: -194px; font-family: 'Berkshire Swash', cursive;
+font-size: 0.72rem; font-weight: 300; color:#00b38f;}
+
+.informacion{float: left; position: relative; width: 473px; height: 300px; padding-left: 22px; padding-right: 20px;}
 
 .fecha{float: left; position: relative; font-family: 'Berkshire Swash', cursive; font-size: 1.1rem; font-weight: 400;
-      color:#b2b52b; margin-top:7px; margin-bottom: 0px;}
+      color:#00b38f; margin-top:7px; margin-bottom: 0px;}
 
-.titulo{ float: left; position: relative; width: 468px; height: 52px; overflow: hidden; font-family: 'Berkshire Swash', cursive;
+.titulo{ float: left; position: relative; width: 468px; height: 32px; overflow: hidden; font-family: 'Berkshire Swash', cursive;
 font-size: 1.5rem; font-weight: 700; text-transform: upperase; text-align: left; color: #ee5ble; line-height: 1.8rem; margin-bottom: 0px;
 margin-top: 5px;}      
 
-.texto{float: left; position: relative; width: 474px; height: 172px; font-family: 'Berkshire Swash', cursive;font-size: 1.1rem;
+.texto{float: left; position: relative; width: 474px; height: 128px; font-family: 'Berkshire Swash', cursive;font-size: 1.1rem;
 font-weight: 300; text-align: justify; overflow: hidden; margin-top: 8px;}
 
 .boton{ float: right; position: relative; width: 101px; height: 97px; background-color: #00b38f; font-family: 'Berkshire Swash',cursive;
-  font-size: 1.1rem; font-weight: 600; text-align: justify; overflow: hidden; margin-top: 8px; border: none; border-radius: 50% 50% 0% 50% ;
+  font-size: 1.4rem; font-weight: 700; text-align: justify; overflow: hidden; margin-top: 54px; border: none; border-radius: 50% 50% 0% 50% ;
   -webkit-box-shadow: 1px 7px 50px 9px #009999; box-shadow: 1px 7px 50px 9px #009999; margin-right: -49px;
-  text-shadow: 3px 3px 5px #009999; padding-top: 8px; cursor: pointer;}
+  text-shadow: 3px 3px 5px #009999; cursor: pointer;}
 .boton:hover{background-color: #009999; text-shadow: 3px 3px 5px #00b38f;
    -webkit-box-shadow: 1px 7px 11px 9px #2CE6CD; box-shadow: 1px 7px 11px 9px #2CE6CD;}
-.leer {margin-top: -68px;}
+
+.publ{padding-top: 8px;}
 
 /*pie*/ 
 .pie {width: 100%; height: 115px; border-top: solid 15px #009999; float: left; position: relative;background-color: #fff;}
@@ -88,6 +100,12 @@ font-weight: 400;color:#2E2EFF; margin-top: -44px; margin-left: 516px; text-alig
 font-weight:200; text-align: justify; line-height: 2.01rem; margin-top: -473px;}
 
 .huecoimagen{float: left; position: relative; width: 553px; height: 550px; margin-top: -48px;}
+
+
+
+
+
+
 
 
 
